--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 
-<h1>This is Rechido's Development & Research page</h1>
-<p>Hello World!</p>
+<h1>rechido.github.io</h1>
+</hr>
+<p>This is rechido's development page</p>
 
 </body>
 </html>
